[workspace]
members = [".", "proc"]
default-members = [".", "proc"]
[workspace.package]
version = "0.1.0"
authors = ["Dragonink (https://github.com/Dragonink)"]
description = "Library to ease working with enum discriminants"
readme = "README.md"
repository = "https://github.com/Dragonink/enum_discrim"
edition = "2021"

[package]
name = "enum_discrim"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }

[dependencies]
enum_discrim-proc = { path = "proc" }
